--- a/ShokshChat/New.storyboard
+++ b/ShokshChat/New.storyboard
@@ -36,7 +36,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ch7-Dw-VMV">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ch7-Dw-VMV" customClass="GradientView" customModule="ShokshChat" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="20" width="375" height="77"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R7j-as-Ge2">
@@ -84,16 +84,68 @@
         <scene sceneID="szH-S3-QMe">
             <objects>
                 <viewController id="eJs-f3-mgT" customClass="ChannelVC" customModule="ShokshChat" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="hJ5-BP-KvA">
+                    <view key="view" contentMode="scaleToFill" id="hJ5-BP-KvA" customClass="GradientView" customModule="ShokshChat" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ShokshChat" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qwv-jo-HVV">
+                                <rect key="frame" x="12" y="44" width="111" height="23"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="19"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CHANNELS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C8t-LI-aWa">
+                                <rect key="frame" x="12" y="87" width="65" height="14"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XgM-hy-E8b">
+                                <rect key="frame" x="278" y="83" width="22" height="22"/>
+                                <state key="normal" image="addChannelButton"/>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menuProfileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="jSl-vI-B3g">
+                                <rect key="frame" x="12" y="572" width="75" height="75"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="75" id="13s-x3-43N"/>
+                                    <constraint firstAttribute="height" constant="75" id="Qqx-TE-3dJ"/>
+                                </constraints>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OcK-AH-JaG">
+                                <rect key="frame" x="0.0" y="125" width="375" height="427"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UyJ-ja-POa">
+                                <rect key="frame" x="107" y="593" width="46" height="33"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="C8t-LI-aWa" firstAttribute="leading" secondItem="KMG-ts-yh9" secondAttribute="leading" constant="12" id="7vY-V6-jLx"/>
+                            <constraint firstItem="C8t-LI-aWa" firstAttribute="top" secondItem="Qwv-jo-HVV" secondAttribute="bottom" constant="20" id="Fx0-ea-QXn"/>
+                            <constraint firstItem="Qwv-jo-HVV" firstAttribute="top" secondItem="KMG-ts-yh9" secondAttribute="top" constant="24" id="HNe-7w-lOm"/>
+                            <constraint firstItem="KMG-ts-yh9" firstAttribute="bottom" secondItem="jSl-vI-B3g" secondAttribute="bottom" constant="20" id="Rwj-95-8ap"/>
+                            <constraint firstItem="OcK-AH-JaG" firstAttribute="leading" secondItem="KMG-ts-yh9" secondAttribute="leading" id="Ten-C8-9zZ"/>
+                            <constraint firstItem="OcK-AH-JaG" firstAttribute="trailing" secondItem="KMG-ts-yh9" secondAttribute="trailing" id="WVn-5V-Lsj"/>
+                            <constraint firstItem="KMG-ts-yh9" firstAttribute="trailing" secondItem="XgM-hy-E8b" secondAttribute="trailing" constant="75" id="e6t-89-IRZ"/>
+                            <constraint firstItem="UyJ-ja-POa" firstAttribute="leading" secondItem="jSl-vI-B3g" secondAttribute="trailing" constant="20" id="eBi-pe-1Zy"/>
+                            <constraint firstItem="Qwv-jo-HVV" firstAttribute="leading" secondItem="KMG-ts-yh9" secondAttribute="leading" constant="12" id="f9P-7D-A1g"/>
+                            <constraint firstItem="jSl-vI-B3g" firstAttribute="leading" secondItem="KMG-ts-yh9" secondAttribute="leading" constant="12" id="fAd-7Q-IwC"/>
+                            <constraint firstItem="jSl-vI-B3g" firstAttribute="top" secondItem="OcK-AH-JaG" secondAttribute="bottom" constant="20" id="fwH-V4-Xql"/>
+                            <constraint firstItem="OcK-AH-JaG" firstAttribute="top" secondItem="XgM-hy-E8b" secondAttribute="bottom" constant="20" id="oxq-wP-v7C"/>
+                            <constraint firstItem="XgM-hy-E8b" firstAttribute="centerY" secondItem="C8t-LI-aWa" secondAttribute="centerY" id="sns-B3-9zc"/>
+                            <constraint firstItem="UyJ-ja-POa" firstAttribute="centerY" secondItem="jSl-vI-B3g" secondAttribute="centerY" id="tme-9P-xj4"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="KMG-ts-yh9"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="js4-w7-8zq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="838" y="-320"/>
+            <point key="canvasLocation" x="837.60000000000002" y="-320.68965517241384"/>
         </scene>
         <!--LoginVC-->
         <scene sceneID="pXh-vg-lqV">
@@ -364,7 +416,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="addChannelButton" width="22" height="22"/>
         <image name="closeButton" width="28" height="28"/>
+        <image name="menuProfileIcon" width="99" height="99"/>
         <image name="profileDefault" width="192" height="192"/>
         <image name="smackBurger" width="40" height="40"/>
         <image name="smackLogo" width="48" height="40"/>
