--- a/ShokshChat/New.storyboard
+++ b/ShokshChat/New.storyboard
@@ -460,6 +460,7 @@
                         <outlet property="userImg" destination="0TE-rj-3XN" id="1za-hh-Ha4"/>
                         <outlet property="usernameTxt" destination="wu4-96-zh1" id="fS0-Ib-vHi"/>
                         <segue destination="x8z-lG-1Eq" kind="unwind" identifier="unwindToChannel" unwindAction="prepareForUnwindWithSegue:" id="Roe-jh-gID"/>
+                        <segue destination="L2h-9A-gnb" kind="show" identifier="toAvatarPicker" id="zIh-LT-6Ho"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="20G-AG-OEG" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -467,12 +468,103 @@
             </objects>
             <point key="canvasLocation" x="2360.8000000000002" y="-321.58920539730138"/>
         </scene>
+        <!--Avatar PickerVC-->
+        <scene sceneID="cA9-wf-2fE">
+            <objects>
+                <viewController id="L2h-9A-gnb" customClass="AvatarPickerVC" customModule="ShokshChat" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5Oz-1O-TYr">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="46T-P0-YJo">
+                                <rect key="frame" x="16" y="37" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="ayC-zu-BJW"/>
+                                    <constraint firstAttribute="width" constant="30" id="t9C-Xd-mBq"/>
+                                </constraints>
+                                <state key="normal" image="smackBack"/>
+                                <connections>
+                                    <action selector="backPressed:" destination="L2h-9A-gnb" eventType="touchUpInside" id="oqH-cE-MBl"/>
+                                </connections>
+                            </button>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="6Co-pQ-Z7g">
+                                <rect key="frame" x="107.5" y="39" width="160" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="160" id="rNu-y2-fFg"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="Dark"/>
+                                    <segment title="light"/>
+                                </segments>
+                                <color key="tintColor" red="0.2901960784" green="0.30196078430000001" blue="0.84705882349999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="segmentControlChanged:" destination="L2h-9A-gnb" eventType="valueChanged" id="jGC-7A-pi5"/>
+                                </connections>
+                            </segmentedControl>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="nFS-AS-pAP">
+                                <rect key="frame" x="0.0" y="87" width="375" height="580"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="T49-dQ-N6g">
+                                    <size key="itemSize" width="100" height="100"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="avatarCell" id="jJa-WB-KSr" customClass="AvatarCell" customModule="ShokshChat" customModuleProvider="target">
+                                        <rect key="frame" x="20" y="0.0" width="100" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="J28-7P-e0K">
+                                                    <rect key="frame" x="10" y="10" width="80" height="80"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="J28-7P-e0K" secondAttribute="trailing" constant="10" id="6SY-72-gO0"/>
+                                            <constraint firstItem="J28-7P-e0K" firstAttribute="top" secondItem="jJa-WB-KSr" secondAttribute="top" constant="10" id="AAo-gH-QgI"/>
+                                            <constraint firstItem="J28-7P-e0K" firstAttribute="leading" secondItem="jJa-WB-KSr" secondAttribute="leading" constant="10" id="IAq-tx-RBz"/>
+                                            <constraint firstAttribute="bottom" secondItem="J28-7P-e0K" secondAttribute="bottom" constant="10" id="PZ1-kd-T9m"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="AvatarImg" destination="J28-7P-e0K" id="LHY-e1-A4u"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="6Co-pQ-Z7g" firstAttribute="centerX" secondItem="5Oz-1O-TYr" secondAttribute="centerX" id="3SB-ag-Ah2"/>
+                            <constraint firstItem="JbY-bi-Uqr" firstAttribute="bottom" secondItem="nFS-AS-pAP" secondAttribute="bottom" id="Dz1-3k-w74"/>
+                            <constraint firstItem="JbY-bi-Uqr" firstAttribute="trailing" secondItem="nFS-AS-pAP" secondAttribute="trailing" id="EEJ-Ea-GDS"/>
+                            <constraint firstItem="46T-P0-YJo" firstAttribute="top" secondItem="JbY-bi-Uqr" secondAttribute="top" constant="17" id="aw1-xC-F7i"/>
+                            <constraint firstItem="46T-P0-YJo" firstAttribute="leading" secondItem="JbY-bi-Uqr" secondAttribute="leading" constant="16" id="bwS-0T-4DC"/>
+                            <constraint firstItem="nFS-AS-pAP" firstAttribute="top" secondItem="46T-P0-YJo" secondAttribute="bottom" constant="20" id="fFr-Hl-Ph6"/>
+                            <constraint firstItem="nFS-AS-pAP" firstAttribute="leading" secondItem="JbY-bi-Uqr" secondAttribute="leading" id="rjy-yc-BI6"/>
+                            <constraint firstItem="6Co-pQ-Z7g" firstAttribute="top" secondItem="JbY-bi-Uqr" secondAttribute="top" constant="19" id="u8e-QW-4P0"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="JbY-bi-Uqr"/>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="nFS-AS-pAP" id="YSd-YY-khY"/>
+                        <outlet property="segmentControl" destination="6Co-pQ-Z7g" id="jdQ-Th-JIm"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bns-j2-JZT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3136.8000000000002" y="-322.48875562218893"/>
+        </scene>
     </scenes>
     <resources>
         <image name="addChannelButton" width="22" height="22"/>
         <image name="closeButton" width="28" height="28"/>
         <image name="menuProfileIcon" width="99" height="99"/>
         <image name="profileDefault" width="192" height="192"/>
+        <image name="smackBack" width="28" height="28"/>
         <image name="smackBurger" width="40" height="40"/>
         <image name="smackLogo" width="48" height="40"/>
     </resources>
